--- a/package.json
+++ b/package.json
@@ -5,9 +5,10 @@
   "proxy": "http://localhost:5000",
   "dependencies": {
     "axios": "^0.17.1",
-    "pg": "^7.4.1",
-    "react": "^16.2.0",
-    "react-dom": "^16.2.0",
+    "chalk": "^2.4.1",
+    "pg": "^7.4.3",
+    "react": "^16.5.0",
+    "react-dom": "^16.5.0",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
     "react-scripts": "^1.1.5",
